@@ -1,5 +1,12 @@
 2016-10-08 Even Rouault <even.rouault at spatialys.com>
 
+	* tools/tiffcp.c: fix out-of-bounds write on tiled images with odd
+	tile width vs image width. Reported as MSVR 35103
+	by Axel Souchet and Vishal Chauhan from the MSRC Vulnerabilities &
+	Mitigations team.
+
+2016-10-08 Even Rouault <even.rouault at spatialys.com>
+
 	* tools/tiff2pdf.c: fix read -largely- outsize of buffer in
 	t2p_readwrite_pdf_image_tile(), causing crash, when reading a
 	JPEG compressed image with TIFFTAG_JPEGTABLES length being one.
